<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="#353B48">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="uz.paycom.payment.PaymentActivity">

        <RelativeLayout
            android:id="@+id/activity_main_errorLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/errorLayoutSize"
            android:background="@android:color/holo_red_light"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@drawable/ic_warning" />

            <TextView
                android:id="@+id/activity_main_errorLayout_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/error"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_micro"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_tiny"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_tiny"
                android:text="@string/close"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />
        </RelativeLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="@dimen/margin_normal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:cardBackgroundColor="#ff7675"
                    app:cardElevation="5dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_close"
                        app:tint="#000000" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/powered_by_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/powered_by"
                    android:textAllCaps="true"
                    android:textColor="@color/payment_screen_label_color"
                    android:textSize="@dimen/textSize_tiny" />

                <ImageView
                    android:id="@+id/payme_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_below="@id/powered_by_text"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_payme" />
            </RelativeLayout>

            <TextView
                android:id="@+id/activity_main_paymentSumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/paymentSum"
                android:textColor="@color/payment_screen_label_color"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_paymentSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@android:color/white"
                android:background="#17FFFFFF"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:textSize="@dimen/textSize_medium"
                android:textStyle="bold"
                tools:text="50000 сум" />

            <TextView
                android:id="@+id/activity_main_cardNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/cardNumber"
                android:textColor="@color/payment_screen_label_color"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_main_cardNumber_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:boxStrokeColor="@drawable/text_input_edittext_box_stroke_color"
                app:endIconMode="clear_text"
                app:endIconTint="#99FFFFFF"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits=" 1234567890"
                    android:imeOptions="actionDone"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/cardNumberHint"
                    android:inputType="number"
                    android:maxLength="19"
                    android:textColor="@android:color/white"
                    android:textColorHint="#4DFFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/activity_main_uzcardOnlyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/uzcardOnly"
                android:textColor="#4DFFFFFF"
                android:textSize="@dimen/textSize_tiny"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_dateExpireTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/dateExpire"
                android:textColor="@color/payment_screen_label_color"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_main_dateExpire_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:boxStrokeColor="@drawable/text_input_edittext_box_stroke_color"
                app:endIconMode="clear_text"
                app:endIconTint="#99FFFFFF"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_dateExpire"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/dateExpireHint"
                    android:inputType="date"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:digits="/0123456789"
                    android:maxLength="5"
                    android:textColor="@android:color/white"
                    android:textColorHint="#4DFFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/activity_main_cardRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/cardRemember" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_main_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/continueText" />

            <ProgressBar
                android:id="@+id/activity_main_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@android:color/white"
                android:drawablePadding="16dp"
                android:textColor="@color/payment_screen_label_color"
                android:text="@string/safe_payment_info"/>
            <TextView
                android:id="@+id/privacy_policy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:layout_gravity="end"
                android:textColor="#74b9ff"
                android:text="@string/checkout_code"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
